Escape the group name when filtering grom Group View.

The filter created by the Group View uses a regular expression to
"Filter by Group". Be sure to escape the group name to allow the use of
special characters in the regular expression.

BUG: 399928
FIXED-IN: 3.1.4